# QQImageProcess_OpenCV

./: .gitignore  CMakeLists.txt  QQImageProcess_OpenCV.pro  README.md
Resource/InstallOpenCV/: InstallOpenCV.sh  InstallOpenCVDependences.sh
Src/: ImageProcessTest.cpp  ImageProcessTest.h  main.cpp
Src/ImageProcess/: All.h  CommonDefinition.h  CommonUtility.cpp  CommonUtility.h  Edge.cpp  Edge.h  Filesystem.cpp  Filesystem.h  Filter.cpp  Filter.h  GeometryTransformation.cpp  GeometryTransformation.h  GradientHistogram.cpp  GradientHistogram.h  GrayTransformation.cpp  GrayTransformation.h  Histogram.cpp  Histogram.h  IntegralImage.cpp  IntegralImage.h  LBP.cpp  LBP.h  ProjectXY.cpp  ProjectXY.h  SimpleLog.h
Src/Utility/: All.h  CommonDefinition.h  CommonUtility.h  Filesystem.cpp  Filesystem.h  SimpleLog.cpp  SimpleLog.h
Windows/VS2013/QQImageProcess_OpenCV/: QQImageProcess_OpenCV.sln  VS2013_Debug.props  VS2013_Release.props
Windows/VS2013/QQImageProcess_OpenCV/Debug/: QQImageProcess_OpenCV.lib
Windows/VS2013/QQImageProcess_OpenCV/QQImageProcess_OpenCV/: QQImageProcess_OpenCV.vcxproj  QQImageProcess_OpenCV.vcxproj.filters
Windows/VS2013/QQImageProcess_OpenCV/Release/: QQImageProcess_OpenCV.lib
